--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>WELCOME</title>
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<div class="white">
+
+<h2>JANE KARIUKI</h2>
+<h1>I am a  web developer</h1>
+ <h2><u>Background</u></h2>
+ <ol>
+   <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
+   <li>Job experience:N/a</li>
+   <li>I chose Moringa school because of high quality method of learning,graduate employability and to acquire programming skills.   </li>
+   </ol>
+   <h2><u>nterests</u></h2>
+   <ol>
+   <li>Art</li>
+ <li>Games</li>
+ <li>Music</li>
+</ol>
+<h2><u>Hobbies</u></h2>
+<ol>
+  <li>Painting</li>
+  <li>Table tennies</li>
+  <li>travelling</li>
+</ol>
+<h2><u>Project</u></h2>
+<a href="https://github.com/WairimuKariuki/Portfolio.git">Patricia Wairimu</a>
+</div>
+
+
+
+
+
+</body>
+
 </html>
