add style to h1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="white">
 
 <h2>JANE KARIUKI</h2>
-<h1>I am a  web developer</h1>
+<h1>I am a  web developer.</h1>
  <h2><u>Background</u></h2>
  <ol>
    <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
