add correction and typo removal

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <li>Job experience:N/a</li>
    <li>I chose Moringa school because of high quality method of learning,graduate employability and to acquire programming skills.   </li>
    </ol>
-   <h2><u>nterests</u></h2>
+   <h2><u>Interests</u></h2>
    <ol>
    <li>Art</li>
  <li>Games</li>
