--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <ol>
    <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
    <li>Job experience:N/a</li>
-   <li>I chose Moringa school because of high quality method of learning,graduate employability and to acquire programming skills.   </li>
+   <li>I chose Moringa school because of high quality method of learning,graduate employability and to acquire programming skills to become a tech-prenuer.   </li>
    </ol>
    <h2><u>Interests</u></h2>
    <ol>
@@ -26,8 +26,9 @@
 <h2><u>Hobbies</u></h2>
 <ol>
   <li>Painting</li>
-  <li>Table tennies</li>
+  <li>coding</li>
   <li>travelling</li>
+  <li>camping</li>
 </ol>
 <h2><u>Project</u></h2>
 <a href="https://github.com/WairimuKariuki/Portfolio.git">Patricia Wairimu</a>
