--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2>JANE KARIUKI</h2>
 <h1>I am a  web developer.</h1>
  <h2><u>Background</u></h2>
- <h3>About Me</h3>
+ <h3><u>About Me</u></h3>
  <ol>
    <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
    <li>Job experience:N/a</li>
