Add text alignment for h2 and h3 elements.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h2>JANE KARIUKI</h2>
 <h1>I am a  web developer.</h1>
- <h2><u>Background</u></h2>
+ <h2 class="background"><u>Background</u></h2>
  <h3><u>About Me</u></h3>
  <ol>
    <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
