Add h3 and ordered list for my skillset.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 <div class="white">
 
 <h2>JANE KARIUKI</h2>
-<h1>I am a  web developer.</h1>
+<h1>I am a  web developer. </h1>
  <h2 class="background"><u>Background</u></h2>
+ <h3><u>Skills</u></h3>
+ <ol>
+   <li>HTML</li>
+   <li>CSS</li>
+   <li>jQuery</li>
+   <li>JavaScript</li>
+   <li>Bootstarp</li>
+ </ol>
  <h3><u>About Me</u></h3>
  <ol>
    <li>Education:Went to Machakos Girls and later joined Nairobi Univesity</li>
